--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       Use Numbers
     </button>
     <br />
-    <table style="border: royalblue;">
+    <table style="background-color: royalblue; padding: 10;">
       <tr>
         <td><button id="0_0" onclick="onClick(0, 0)" style="background-color:  red"></button></td>
         <td><button id="1_0" onclick="onClick(1, 0)" style="background-color:  orange"</button></td>
