--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a style="place-content: right" href="rules.html">Instructions</a>
     <p id="no_move"></p>
     <button
-      style="height: 40; width: 100; margin: auto"
+      style="height: 40; width: 100; margin: auto; color:yellow"
       id="numbers"
       onclick="useH()"
     >
