made some changes to  rules.html turns ou t there was no bug

--- a/rules.html
+++ b/rules.html
@@ -2,6 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      body{
+        line-height: 15px;
+      }
+    </style>
     <title>Instructions</title>
 </head>
 <body>
@@ -28,3 +33,5 @@ using Hebrew: <br>
         </p>
 </body>
 </html>
+<br>
+<p>Notice: Spophete/Final letters come <div style="background-color: yellow;"><strong><em><u>after</u></em></strong></div>their non-sophete partner</p>
