--- a/rules.html
+++ b/rules.html
@@ -5,6 +5,13 @@
     <style>
       body{
         line-height: 15px;
+        background-image: linear-gradient(rgba(140, 137, 137, 0.66), rgb(172, 171, 171));
+      }
+      #highlights{
+        font-weight: bolder;
+        font-style: italic;
+        color: yellow;
+        text-decoration: underline;
       }
     </style>
     <title>Instructions</title>
@@ -34,4 +41,4 @@ using Hebrew: <br>
 </body>
 </html>
 <br>
-<p>Notice: Spophete/Final letters come <div style="background-color: yellow;"><strong><em><u>after</u></em></strong></div>their non-sophete partner</p>
+Notice all Sophete/Final letters come <div id="highlights">after</div> the noramal one like &#x05DE and then &#x05DD
