Mabye added cheat and mabye added a code.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
         <td><button id="1_4" onclick="onClick(1, 4)" style="background-color:  orange"></button></td>
         <td><button id="2_4" onclick="onClick(2, 4)" style="background-color:  red"></button></td>
         <td><button id="3_4" onclick="onClick(3, 4)" style="background-color:  orange"></button></td>
-        <td><button id="4_4" onclick="onClick(4, 4)" style="background-color:  black"></button></td>
+        <td><button id="4_4" onclick="onClick(4, 4)"></button></td>
       </tr>
     </table>
+    <label for="code">Cheat Code</label>
+    <input type="text" id="code" onkeypress="cheat()" style="background-color: blueviolet;">
   </body>
 </html>
