--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body onload="randomizeBoard()">
-    <a style="place-content: right" href="rules.html">Instructions</a>
+    <a style="place-content: right" href="rules.html">Instructions(this will restart the game)</a>
     <p id="no_move"></p>
     <button
       style="height: 40; width: 100; margin: auto; background-color:yellow"
