--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </style>
   </head>
   <body onload="randomizeBoard()">
+    <form action="https://darthrellier.github.io"><button type="submit">Home</button></form>
     <a style="place-content: right" href="rules.html">Instructions(this will restart the game)</a>
     <p id="no_move"></p>
     <button
