--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Hebrew Rearrange</title>
     <script src="main.js"></script>
     <style>
-      button {
+      table button {
         height: 80;
         width: 100;
       }
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body onload="randomizeBoard()">
-    <form action="https://darthrellier.github.io"><button type="submit">Home</button></form>
+    <button onclick="location.href = 'https://darthrellier.github.io'">Home</button>
     <a style="place-content: right" href="rules.html">Instructions(this will restart the game)</a>
     <p id="no_move"></p>
     <button
